--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@bonfhir/core": "^2.16.1"
+    "@bonfhir/core": "^2.16.1",
+    "fast-xml-parser": "^4.3.2"
   }
 }
