--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "build": "bun build index.ts --outdir ./build",
     "dev": "bun run index.ts"
   },
   "devDependencies": {
