--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "bun run index.ts"
   },
   "devDependencies": {
-    "bun-types": "^1.0.14"
+    "bun-types": "^1.0.14",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -16,6 +18,8 @@
   "dependencies": {
     "@bonfhir/core": "^2.16.1",
     "fast-xml-parser": "^4.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tslog": "^4.9.2"
   }
 }
