--- a/packages/snomed/package.json
+++ b/packages/snomed/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fhir-roast",
+  "name": "fhir-roast-snomed",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -13,8 +13,9 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "dependencies": {},
-  "workspaces": [
-    "packages/*"
-  ]
+  "dependencies": {
+    "@bonfhir/core": "^2.16.1",
+    "tslog": "^4.9.2",
+    "fhir-roast-terminology": "workspace:*"
+  }
 }
