--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fhir-roast-database",
+  "name": "@fhir-roast/database",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@bonfhir/core": "^2.16.1",
+    "@fhir-roast/terminology": "workspace:*",
     "tslog": "^4.9.2"
   }
 }
