feat: Integrate plugin architecture
Refactor application to make use of plugin architecture.
Convert packages to plugins.
Rename previous `core` package to `server`.
Add new `core` package with plugin definitions.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "fhir-roast",
+  "name": "@fhir-roast/server",
   "module": "index.ts",
   "type": "module",
   "scripts": {
     "test": "bun test",
+    "build": "bun build index.ts --outdir ./build",
     "dev": "bun run index.ts"
   },
   "devDependencies": {
@@ -13,10 +14,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "toml": "^3.0.0"
-  },
-  "workspaces": [
-    "packages/*",
-    "plugins/*"
-  ]
+    "@bonfhir/core": "^2.16.1",
+    "fast-xml-parser": "^4.3.2",
+    "tslog": "^4.9.2"
+  }
 }
