--- a/config/roast.toml
+++ b/config/roast.toml
@@ -1,3 +1,18 @@
+# FHIR Roast Configuration File
 [server]
+# load = true
 hostname = "0.0.0.0"
 port = 3000
+
+[browser]
+# load = true
+
+[database]
+# load = true
+adapter = "sqlite" # naive, sqlite
+
+[terminology]
+# load = true
+
+[snomed]
+# load = true
