--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "bun-lightningcss": "^0.2.0",
     "@bonfhir/core": "^2.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
