--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -3,23 +3,30 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "bun test",
-    "build": "bun build index.ts --outdir ./build",
-    "dev": "bun run index.ts"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "bun test"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "bun-lightningcss": "^0.2.0",
+    "@bonfhir/core": "^2.16.1",
+    "tslog": "^4.9.2"
   },
   "devDependencies": {
     "bun-types": "^1.0.14",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "bun-lightningcss": "^0.2.0",
-    "@bonfhir/core": "^2.16.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tslog": "^4.9.2"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
