--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "bun test",
     "build": "bun build packages/browser/src/hydrate.tsx --outdir ./build",
-    "dev": "bun run index.ts"
+    "dev": "bun run --watch index.ts"
   },
   "devDependencies": {
     "bun-types": "^1.0.14"
