--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fhir-roast/server",
+  "name": "@fhir-roast/utils",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -14,7 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@bonfhir/core": "^2.16.1",
-    "fast-xml-parser": "^4.3.2"
+    "tslog": "^4.9.2",
+    "stringify-object": "^5.0.0"
   }
 }
